--- a/config/client.toml
+++ b/config/client.toml
@@ -1,6 +1,6 @@
 broadcast-mode = "sync"
 chain-id = "structstestnet-100"
-keyring-backend = "file"
+keyring-backend = "test"
 keyring-dir = "/var/structs/accounts"
 node = "tcp://structsd:26657"
-output = "josn"
+output = "json"
